--- a/boardgame.html
+++ b/boardgame.html
@@ -64,8 +64,8 @@
 
                     <div class="pt-5 row">
                         <div class="col-3"></div>
-                        <div class="col-1 chs4 border1" id="pos0" style="background-image : url('img/boards/start.svg');background-repeat: no-repeat;background-size: contain;background-position: center;">
-                            start</div>
+                        <!-- <div class="col-1 chs4 border1" id="pos0" style="background-image : url('img/boards/start.svg');background-repeat: no-repeat;background-size: contain;background-position: center;"></div> -->
+                        <div class="col-1" id="pos0"></div>
                         <div class="col-1 chs1 border1 boardImg" id="pos1" style="background-image : url('img/modals/p1.svg');"></div>
                         <div class="col-1 chs2 border1 boardImg" id="pos2" style="background-image : url('img/modals/p2.svg');">
                         </div>
@@ -122,14 +122,15 @@
                         <div class="col-1 chs3 border6 boardImg" id="pos17" style="background-image : url('img/modals/p17.svg');"></div>
                         <div class="col-1 chs1 border1 boardImg" id="pos18" style="background-image : url('img/modals/p18.svg');">
                         </div>
-                        <div class="col-1 chs4 border0 boardImg" id="pos19" style="background-image : url('img/modals/p20.svg');border-top-right-radius: 100%;"></div>
+                        <div class="col-1 chs4 border0 boardImg" id="pos19" style="background-image : url('img/modals/p20.svg');"></div>
                     </div>
 
                     <!--------------------------------------------------------------------- row5 -->
 
                     <div class="row">
                         <div class="col-4"></div>
-                        <div class="col-1 chs3 border4 boardImg" id="pos20" style="background-image : url('img/boards/finish_line.svg');background-repeat: no-repeat;background-size: contain;background-position: center;">
+                        <!-- <div class="col-1 chs3 border4 boardImg" id="pos20" style="background-image : url('img/boards/finish_line.svg');background-repeat: no-repeat;background-size: contain;background-position: center;"> -->
+                        <div class="col-1" id="pos20">
                         </div>
                     </div>
                 </div>
