--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <body>
 
-    <section class="center_dis">
+    <!-- <section class="center_dis">
         <img class="intro_img tagline" src="img/intro/i1.png" alt="">
         <h1 class="ci2 fz_300 tagline">Dice your <span class="fz_600">Big Project</span></h1>
     </section>
@@ -64,13 +64,13 @@
             x: 500
 
         });
-    </script>
+    </script> -->
 
 
 
 
 
-    <!-- <div class="intro center_dis">
+    <div class="intro center_dis">
         <img class="intro_img tagline" src="img/intro/i1.png" alt="">
 
         <h1 class="ci2 fz_300 tagline">Dice your <span class="fz_600">Big Project</span></h1>
@@ -112,7 +112,7 @@
                 document.querySelector('.arrow').style.display = 'none'
             }
         });
-    </script> -->
+    </script>
 </body>
 
 
