--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 
+    <!-- Style, Script -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.2.0/zepto.min.js"></script>
+
     <!-- ScrollReveal -->
     <script src="https://unpkg.com/scrollreveal"></script>
 
