--- a/boardgame.html
+++ b/boardgame.html
@@ -48,7 +48,6 @@
     <section class="center_dis">
 
         <div class="preloader"></div>
-
         <div id="app">
             <div class="container-fulid my-5">
                 <div class="row">
@@ -144,17 +143,14 @@
                             <div class="col-1 chs3 border6 boardImg" id="pos17" style="background-image : url('img/modals/p17.svg');"></div>
                             <div class="col-1 chs1 border1 boardImg" id="pos18" style="background-image : url('img/modals/p18.svg');">
                             </div>
-                            <div class="col-1 chs4 border0 boardImg" id="pos19" style="background-image : url('img/modals/p20.svg');"></div>
+                            <div class="col-1 chs4 border0 boardImg" id="pos19" style="background-image : url('img/modals/p19.svg');">
+                            </div>
+                            <div class="col-1 chs2 border0 boardImg" id="pos20" style="background-image : url('img/modals/p20.svg');">
+                            </div>
                         </div>
 
                         <!--------------------------------------------------------------------- row6 -->
 
-                        <div class="row">
-                            <div class="col-4"></div>
-                            <!-- <div class="col-1 chs3 border4 boardImg" id="pos20" style="background-image : url('img/boards/finish_line.svg');background-repeat: no-repeat;background-size: contain;background-position: center;"> -->
-                            <div class="col-1" id="pos20">
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -193,7 +189,8 @@
                                         <i class="fas fa-clock"></i> {{ data[index].date }}
                                         <br>
                                         <br>
-                                        <a class="ci2" :href="data[index].cr" target="_blank">อ่านเพิ่มเติม <i class="fad fa-angle-double-right"></i></a>
+                                        <a class="ci2" :href="data[index].cr" target="_blank">อ่านเพิ่มเติม <i
+                                                class="fad fa-angle-double-right"></i></a>
                                     </p>
                                     <br>
 
@@ -264,7 +261,8 @@
                                     <h5 class="fz_300 center_dis mt-2">badge ที่คุณได้รับ</h5>
                                 </div>
                             </div>
-                            <div class="alert alert-secondary w-75 mx-auto my-3" role="alert" v-if="badgeOpenDetail == 1">
+                            <!-- <div class="alert alert-secondary w-75 mx-auto my-3" role="alert"
+                                v-if="badgeOpenDetail == 1">
                                 <h4 class="alert-heading fz_600">{{ badgeDetail.name }}</h4>
                                 <p>{{ badgeDetail.details }}</p>
                                 <hr>
@@ -276,19 +274,21 @@
                                     <i class="fas fa-clock"></i> {{ badgeDetail.date }}
                                     <br>
                                     <br>
-                                    <a class="ci2" :href="badgeDetail.cr" target="_blank">อ่านเพิ่มเติม <i class="fad fa-angle-double-right"></i></a>
+                                    <a class="ci2" :href="badgeDetail.cr" target="_blank">อ่านเพิ่มเติม <i
+                                            class="fad fa-angle-double-right"></i></a>
                                 </p>
-                            </div>
+                            </div> -->
                             <div class="row w-75 mx-auto">
-                                <div class="col-md-3" v-for="(badge, index) in badgeAppend">
+                                <div class="col-md-3" v-for="(badge, index) in badgeAppend" :key="index">
                                     <img class="w-100 myhover" :src="badge.badge_img" v-if="badge.status == true" @click="getBadgeDetail(index)" />
-                                    <img class="w-100 myhover" style="filter: grayscale(100%);" :src="badge.badge_img" v-else/>
+                                    <img class="w-100 myhover" style="filter: grayscale(100%);" :src="badge.badge_img" v-else />
                                 </div>
                             </div>
 
                             <br>
                             <div class="text-center">
-                                <button class="text-center btn btn-success mb-5" onClick="window.location.href=window.location.href">เล่นอีกครั้ง <i class="fas fa-redo-alt"></i></button>
+                                <button class="text-center btn btn-success mb-5" onClick="window.location.href=window.location.href">เล่นอีกครั้ง <i
+                                        class="fas fa-redo-alt"></i></button>
                             </div>
                         </div>
                     </div>
@@ -305,6 +305,7 @@
     var app = new Vue({
         el: '#app',
         data: {
+            returnWalk: 'go',
             before: 0,
             count: 0,
             index: 0,
@@ -315,6 +316,7 @@
             popupStatus: 0,
             point: 0,
             badge: '',
+            checkPoint: [],
             badgeResult: [],
             badgeAppend: [],
             badgeOpenDetail: 0,
@@ -687,25 +689,55 @@
         methods: {
             // walk function
             walkAway: function(add) {
-                this.before = this.count;
-                this.count += add;
-                this.index = this.count - 1;
+                if (this.returnWalk == "go") {
 
-                document.querySelector('#pos' + this.before).innerHTML = '';
-                document.querySelector('#pos' + this.count).innerHTML = '<div class="character bounce"></div>';
+                    if (this.count + add > 20) {
+                        this.returnWalk = "back";
+                        this.before = this.count;
+                        this.count = 20 - (this.count + add - 20);
+                        this.index = this.count - 1;
+                    } else {
+                        this.before = this.count;
+                        this.count += add;
+                        this.index = this.count - 1;
+                    }
+                    document.querySelector('#pos' + this.before).innerHTML = '';
+                    document.querySelector('#pos' + this.count).innerHTML = '<div class="character bounce"></div>';
 
+                    if (this.count > 0 && !this.checkPoint.includes(this.index)) {
+                        console.log(this.checkPoint.includes(this.index))
+                        setTimeout(function() {
+                            $('#staticBackdrop').modal('show')
+                        }, 1000);
+                    } else if (this.count > 0) {
+                        setTimeout(function() {
+                            alert('คุณเคยลงทุนไปแล้ว')
+                        }, 1000);
+                    }
+                } else {
+                    if (this.count - add <= 0) {
+                        this.returnWalk = "go";
+                        // this.before = this.count;
+                        // this.count = 20 - (this.count+add - 20);
+                        // this.index = this.count - 1;
+                    } else {
+                        this.before = this.count;
+                        this.count -= add;
+                        this.index = this.count - 1;
+                    }
+                    document.querySelector('#pos' + this.before).innerHTML = '';
+                    document.querySelector('#pos' + this.count).innerHTML = '<div class="character bounce"></div>';
 
-                setTimeout(function() {
-                    $('#staticBackdrop').modal('show')
-                }, 4500);
-
-
-                if (this.count >= 20) {
-                    this.count = 20 - (this.count - 20);
-                }
-                if (this.token - this.data[index].token <= 0) {
-                    this.setEnd = true;
-                    this.selectResult();
+                    if (this.count > 0 && !this.checkPoint.includes(this.index)) {
+                        console.log(this.checkPoint.includes(this.index))
+                        setTimeout(function() {
+                            $('#staticBackdrop').modal('show')
+                        }, 1000);
+                    } else {
+                        setTimeout(function() {
+                            alert('คุณเคยลงทุนไปแล้ว')
+                        }, 1000);
+                    }
                 }
 
             },
@@ -717,24 +749,20 @@
                 var randomNumber = Math.floor(Math.random() * 6) + 1;
                 var dice = document.getElementById('dice').src = "img/dice/d" + randomNumber + ".svg";
 
-                for (let i = 1; i <= ROLLING_NUMBER; i++) {
+                for (let i = 0; i <= ROLLING_NUMBER; i++) {
                     setTimeout(() => {
-                        var randomNumber = Math.floor(Math.random() * 6) + 1;
-                        var dice = document.getElementById('dice').src = "img/dice/d" + randomNumber + ".svg";
-                        // if (i === ROLLING_NUMBER) {
-                        //     $('#staticBackdrop').modal('show')
-                        //     this.walkAway(randomNumber)
-                        // }
+                        if (i < 5) {
+                            var randomNumber2 = Math.floor(Math.random() * 6) + 1;
+                            document.querySelector('#dice').src = "img/dice/d" + randomNumber2 + ".svg";
+                        } else {
+                            document.querySelector('#dice').src = "img/dice/d" + randomNumber + ".svg";
+                        }
                     }, 100 * i);
                 }
 
-                this.walkAway(randomNumber)
-
-                // setTimeout(function() {
-                //     $('#staticBackdrop').modal('show')
-                // }, 10000);
-
-                // this.tokenStateFn()
+                setTimeout(() => {
+                    this.walkAway(randomNumber)
+                }, 500);
             },
 
             // Calculation token Function
@@ -744,9 +772,10 @@
             },
 
             selectResult: function(status, index) {
-                if (this.count >= 20 || this.token <= 0 || this.setEnd == true) {
-                    this.popupStatus = 2;
+                console.log('badgeResult', this.badgeResult);
+                if (this.token - this.data[index].token <= 0) {
                     this.loadBadge();
+                    this.popupStatus = 2;
                 } else if (this.popupStatus != 2) {
                     this.popupStatus = 1;
                     if (status == true) {
@@ -759,6 +788,7 @@
                             this.point += this.data[index].points;
                             this.badge = this.data[index].img.badge_img;
                             this.badgeResult.push(this.data[index].img.badge_img);
+                            this.checkPoint.push(index);
                         } else {
                             this.point -= this.data[index].points;
                         }
@@ -768,26 +798,24 @@
                 }
             },
 
-            loadBadge: function() {
+            loadBadge() {
                 for (var i = 1; i <= 20; i++) {
                     if (this.badgeResult.includes("b" + i + ".svg")) {
                         var obj = {};
-                        obj["badge_name"] = 'test';
+                        obj["badge_name"] = i;
                         obj["badge_img"] = 'img/badge/b' + i + '.svg';
                         obj["status"] = true;
                         this.badgeAppend.push(obj);
-                        // this.badgeAppend += "<div class='col-md-3'>";
-                        // this.badgeAppend += '<img class="w-100" src="img/badge/b' + i + '.svg">';
-                        // this.badgeAppend += "</div>";
                     } else {
                         var obj = {};
-                        obj["badge_name"] = 'test';
+                        obj["badge_name"] = i;
                         obj["badge_img"] = 'img/badge/b' + i + '.svg';
                         obj["status"] = false;
                         this.badgeAppend.push(obj);
-                        // this.badgeAppend += "<div class='col-md-3'><img class='w-100' style='filter: grayscale(100%);' src='img/badge/b" + i + ".svg'></div>";
                     }
                 }
+                console.log('badgeAppend', this.badgeAppend);
+
             },
 
             getBadgeDetail: function(index) {
