--- a/boardgame.html
+++ b/boardgame.html
@@ -29,6 +29,29 @@
 </head>
 
 <body>
+    <?xml version="1.0" encoding="utf-8"?>
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 800 600" style="enable-background:new 0 0 800 600;" xml:space="preserve">
+        <defs>
+            <linearGradient id="Gradient">
+              <stop offset="0" stop-color="white" stop-opacity="1" />
+              <stop offset="1" stop-color="white" stop-opacity="0" />
+            </linearGradient>
+            <mask id="Mask1">
+              <polygon points="573.7,102.2 477.4,178 504.7,212.7 601,136.9" fill="url(#Gradient)" />
+            </mask>
+            <mask id="Mask2">
+              <polygon points="287.8,202.4 191.6,278.1 218.9,312.8 315.1,237.1" fill="url(#Gradient)" />
+            </mask>
+            <mask id="Mask3">
+              <polygon points="659,349.4 562.7,425.2 590.1,459.9 686.3,384.2" fill="url(#Gradient)" />
+            </mask>
+          </defs>
+            <g id="comets">
+                  <line stroke="#FFD066" mask="url(#Mask1)" x1="0" y1="581" x2="737.7" y2="0.3"/>
+                  <line stroke="#FFD066" mask="url(#Mask2)" x1="3.5" y1="456" x2="572.5" y2="8.1"/>
+                  <line stroke="#FFD066" mask="url(#Mask3)" x1="381.3" y1="600" x2="800" y2="270.4"/>
+            </g>
+    </svg>
 
     <img class="myBG" src="img/background/bg1.svg">
 
@@ -36,23 +59,112 @@
     <!-------------------------------------------------------------------------------->
     <!--------------------------------------------------------------------- loading -->
     <section class="center_dis">
-
         <div class="preloader"></div>
+
+        <!------------------------------------------------------------------------------>
+        <!--------------------------------------------------------------------- Board -->
+
         <div id="app">
             <div class="container-fulid my-5">
+
+                <!--------------------------------------------------------------------- row1 -->
+
+                <div class="pt-5 row">
+                    <div class="col-3"></div>
+                    <div class="col-1" id="pos0">
+                        <!-- <div class="character bounce">
+                            <img src="img/character/c1.svg" alt="">
+                        </div> -->
+                        <img src="img/character/c1.svg" class="character bounce">
+                    </div>
+                    <div class="col-1 chs border1 boardImg" id="pos1" style="background-image : url('img/modals/p1.svg');"></div>
+                    <div class="col-1 chs border1 boardImg" id="pos2" style="background-image : url('img/modals/p2.svg');">
+                    </div>
+                    <div class="col-1 chs border1 boardImg" id="pos3" style="background-image : url('img/modals/p3.svg');"></div>
+                    <div class="col-1 chs border1 boardImg" id="pos4" style="background-image : url('img/modals/p4.svg');"></div>
+                    <div class="col-1 chs border1 boardImg" id="pos5" style="background-image : url('img/modals/p5.svg');">
+                    </div>
+                    <div class="col-1 chs border1 boardImg" id="pos6" style="background-image : url('img/modals/p6.svg');"></div>
+                    <div class="col-1 chs border2" style="border-top-right-radius: 50%;"></div>
+                    <div class="col-1"></div>
+                </div>
+
+                <!--------------------------------------------------------------------- row2 -->
+
                 <div class="row">
+                    <div class="col-10"></div>
+                    <div class="col-1 chs border3 boardImg" id="pos7" style="background-image : url('img/modals/p7.svg');">
+                    </div>
+                    <div class="col-1"></div>
+                </div>
 
-                    <!------------------------------------------------------------------------------>
-                    <!--------------------------------------------------------------------- State -->
+                <!--------------------------------------------------------------------- row3 -->
 
-                    <div class="col-md-3 statePanel">
+                <div class="row">
+                    <div class="col-1"></div>
+                    <div class="col-1 chs border5" style="border-top-left-radius: 60%;"></div>
+                    <div class="col-1 chs border6 boardImg" id="pos15" style="background-image : url('img/modals/p15.svg');"></div>
+                    <div class="col-1 chs border1 boardImg" id="pos14" style="background-image : url('img/modals/p14.svg');">
+                    </div>
+                    <div class="col-1 chs border1 boardImg" id="pos13" style="background-image : url('img/modals/p13.svg');"></div>
+                    <div class="col-1 chs border1 boardImg" id="pos12" style="background-image : url('img/modals/p12.svg');"></div>
+                    <div class="col-1 chs border1 boardImg" id="pos11" style="background-image : url('img/modals/p11.svg');"></div>
+                    <div class="col-1 chs border1 boardImg" id="pos10" style="background-image : url('img/modals/p10.svg');">
+                    </div>
+                    <div class="col-1 chs border1 boardImg" id="pos9" style="background-image : url('img/modals/p9.svg');"></div>
+                    <div class="col-1 chs border1 boardImg" id="pos8" style="background-image : url('img/modals/p8.svg');">
+                    </div>
+                    <div class="col-1 chs border4" style="border-bottom-right-radius: 60%;"></div>
+                    <div class="col-1" id="pos12"></div>
+                </div>
+
+                <!--------------------------------------------------------------------- row4 -->
+
+                <div class="row">
+                    <div class="col-1"></div>
+                    <div class="col-1 chs border3 boardImg" id="pos16" style="background-image : url('img/modals/p16.svg');">
+                    </div>
+                    <div class="col-10"></div>
+                </div>
+
+                <!--------------------------------------------------------------------- row5 -->
+
+                <div class="row">
+                    <div class="col-1"></div>
+                    <div class="col-1 chs border4" style="border-bottom-left-radius: 60%;"></div>
+                    <div class="col-1 chs border6 boardImg" id="pos17" style="background-image : url('img/modals/p17.svg');"></div>
+                    <div class="col-1 chs border1 boardImg" id="pos18" style="background-image : url('img/modals/p18.svg');">
+                    </div>
+                    <div class="col-1 chs border0 boardImg" id="pos19" style="background-image : url('img/modals/p19.svg');">
+                    </div>
+                    <div class="col-1 chs border0 boardImg" id="pos20" style="background-image : url('img/modals/p20.svg');">
+                    </div>
+                </div>
+
+                <!------------------------------------------------------------------------------>
+                <!--------------------------------------------------------------------- State -->
+
+                <br><br><br>
+                <div class="row statePanel">
+                    <div class="col-md-10">
 
                         <div class="money">
                             <!--  money status -->
                             <img class="buget_img" src="img/boards/coin.svg">
-                            <h4 class="buget_value fz_600 ci1">{{ tokenState }}</h4>
+                            <div class="row tokenState">
+                                <div class="col-12">
+                                    <h2 class="fz_600 mb-0">{{ tokenState }}</h2>
+                                </div>
+                                <div class="col-12">
+                                    <p class="mb-0">Token</p>
+                                </div>
+                            </div>
                         </div>
+                        <hr style="border-color: #fff;">
 
+                    </div>
+
+                    <div class="col-md-2">
                         <div class="pointer">
                             <!-- Dice -->
                             <a @click.prevent="roll">
@@ -66,93 +178,7 @@
                                         <div class="diceFace back"></div>
                                     </div>
                                 </div>
-                                <!-- <img id="dice" src="img/dice/d1.svg"> -->
                             </a>
-                        </div>
-
-                        <!-- <div class="dice myhover mt-5">
-                            <a @click.prevent="roll">
-                                <img id="dice" src="img/dice/d1.svg">
-                            </a>
-                        </div> -->
-
-                    </div>
-
-                    <!------------------------------------------------------------------------------>
-                    <!--------------------------------------------------------------------- Board -->
-
-                    <div class="pt-5 col-md-9">
-
-                        <!--------------------------------------------------------------------- row1 -->
-
-                        <div class="pt-5 row">
-                            <div class="col-3"></div>
-                            <!-- <div class="col-1 chs4 border1" id="pos0" style="background-image : url('img/boards/start.svg');background-repeat: no-repeat;background-size: contain;background-position: center;"></div> -->
-                            <div class="col-1" id="pos0">
-                                <div class="character bounce"></div>
-                            </div>
-                            <div class="col-1 chs1 border1 boardImg" id="pos1" style="background-image : url('img/modals/p1.svg');"></div>
-                            <div class="col-1 chs2 border1 boardImg" id="pos2" style="background-image : url('img/modals/p2.svg');">
-                            </div>
-                            <div class="col-1 chs3 border1 boardImg" id="pos3" style="background-image : url('img/modals/p3.svg');"></div>
-                            <div class="col-1 chs2 border1 boardImg" id="pos4" style="background-image : url('img/modals/p4.svg');"></div>
-                            <div class="col-1 chs4 border1 boardImg" id="pos5" style="background-image : url('img/modals/p5.svg');">
-                            </div>
-                            <div class="col-1 chs1 border1 boardImg" id="pos6" style="background-image : url('img/modals/p6.svg');"></div>
-                            <div class="col-1 chs3 border2" style="border-top-right-radius: 50%;"></div>
-                            <div class="col-1"></div>
-                        </div>
-
-                        <!--------------------------------------------------------------------- row2 -->
-
-                        <div class="row">
-                            <div class="col-10"></div>
-                            <div class="col-1 chs3 border3 boardImg" id="pos7" style="background-image : url('img/modals/p7.svg');">
-                            </div>
-                            <div class="col-1"></div>
-                        </div>
-
-                        <!--------------------------------------------------------------------- row3 -->
-
-                        <div class="row">
-                            <div class="col-1"></div>
-                            <div class="col-1 chs2 border5" style="border-top-left-radius: 60%;"></div>
-                            <div class="col-1 chs1 border6 boardImg" id="pos15" style="background-image : url('img/modals/p15.svg');"></div>
-                            <div class="col-1 chs2 border1 boardImg" id="pos14" style="background-image : url('img/modals/p14.svg');">
-                            </div>
-                            <div class="col-1 chs4 border1 boardImg" id="pos13" style="background-image : url('img/modals/p13.svg');"></div>
-                            <div class="col-1 chs3 border1 boardImg" id="pos12" style="background-image : url('img/modals/p12.svg');"></div>
-                            <div class="col-1 chs1 border1 boardImg" id="pos11" style="background-image : url('img/modals/p11.svg');"></div>
-                            <div class="col-1 chs2 border1 boardImg" id="pos10" style="background-image : url('img/modals/p10.svg');">
-                            </div>
-                            <div class="col-1 chs4 border1 boardImg" id="pos9" style="background-image : url('img/modals/p9.svg');"></div>
-                            <div class="col-1 chs1 border1 boardImg" id="pos8" style="background-image : url('img/modals/p8.svg');">
-                            </div>
-                            <div class="col-1 chs3 border4" style="border-bottom-right-radius: 60%;"></div>
-                            <div class="col-1" id="pos12"></div>
-                        </div>
-
-                        <!--------------------------------------------------------------------- row4 -->
-
-                        <div class="row">
-                            <div class="col-1"></div>
-                            <div class="col-1 chs2 border3 boardImg" id="pos16" style="background-image : url('img/modals/p16.svg');">
-                            </div>
-                            <div class="col-10"></div>
-                        </div>
-
-                        <!--------------------------------------------------------------------- row5 -->
-
-                        <div class="row">
-                            <div class="col-1"></div>
-                            <div class="col-1 chs2 border4" style="border-bottom-left-radius: 60%;"></div>
-                            <div class="col-1 chs3 border6 boardImg" id="pos17" style="background-image : url('img/modals/p17.svg');"></div>
-                            <div class="col-1 chs1 border1 boardImg" id="pos18" style="background-image : url('img/modals/p18.svg');">
-                            </div>
-                            <div class="col-1 chs4 border0 boardImg" id="pos19" style="background-image : url('img/modals/p19.svg');">
-                            </div>
-                            <div class="col-1 chs2 border0 boardImg" id="pos20" style="background-image : url('img/modals/p20.svg');">
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -301,6 +327,7 @@
                     </div>
                 </div>
             </div>
+        </div>
     </section>
 </body>
 
@@ -334,8 +361,8 @@
             count: 0,
             index: 0,
             dice: 0,
-            token: 20,
-            tokenState: '230 Token',
+            token: 230,
+            tokenState: '230',
             investState: '',
             popupStatus: 0,
             point: 0,
@@ -725,7 +752,7 @@
                         this.index = this.count - 1;
                     }
                     document.querySelector('#pos' + this.before).innerHTML = '';
-                    document.querySelector('#pos' + this.count).innerHTML = '<div class="character bounce"></div>';
+                    document.querySelector('#pos' + this.count).innerHTML = '<img src="img/character/c1.svg" class="character bounce">';
 
                     if (this.count > 0 && !this.checkPoint.includes(this.index)) {
                         console.log(this.checkPoint.includes(this.index))
@@ -740,16 +767,13 @@
                 } else {
                     if (this.count - add <= 0) {
                         this.returnWalk = "go";
-                        // this.before = this.count;
-                        // this.count = 20 - (this.count+add - 20);
-                        // this.index = this.count - 1;
                     } else {
                         this.before = this.count;
                         this.count -= add;
                         this.index = this.count - 1;
                     }
                     document.querySelector('#pos' + this.before).innerHTML = '';
-                    document.querySelector('#pos' + this.count).innerHTML = '<div class="character bounce"></div>';
+                    document.querySelector('#pos' + this.count).innerHTML = '<img src="img/character/c1.svg" class="character bounce">';
 
                     if (this.count > 0 && !this.checkPoint.includes(this.index)) {
                         console.log(this.checkPoint.includes(this.index))
@@ -767,14 +791,9 @@
 
             // Random Rolling Dice Function
 
-
-
-            // Random Rolling Dice Function
-
             roll: function() {
                 const ROLLING_NUMBER = 5;
                 var randomNumber = Math.floor(Math.random() * 6) + 1;
-                // var dice = document.getElementById('dice').src = "img/dice/d" + randomNumber + ".svg";
 
                 //Set value
                 const setVal = (num) => {
@@ -800,7 +819,6 @@
                     getVal();
                     $(".dice3d").css("transform", `rotate3d(${Object.values(allVal)}, 180deg)`);
                 };
-
                 setDice();
 
 
@@ -825,8 +843,6 @@
                     }, 100 * i);
                 }
 
-
-
                 setTimeout(() => {
                     this.walkAway(randomNumber)
                 }, 2000);
@@ -850,7 +866,7 @@
                         this.investState = this.data[index].result;
                         // Calc Token Total
                         this.token = this.token - this.data[index].token;
-                        this.tokenState = this.token + ' Token';
+                        this.tokenState = this.token;
                         if (this.data[index].state == 'Good') {
                             this.point += this.data[index].points;
                             this.badge = this.data[index].img.badge_img;
