--- a/boardgame.html
+++ b/boardgame.html
@@ -53,28 +53,23 @@
             </g>
     </svg>
 
-    <img class="myBG" src="img/background/bg1.svg">
-
 
     <!-------------------------------------------------------------------------------->
     <!--------------------------------------------------------------------- loading -->
-    <section class="center_dis">
+    <section class="myBg center_dis">
         <div class="preloader"></div>
 
         <!------------------------------------------------------------------------------>
         <!--------------------------------------------------------------------- Board -->
 
         <div id="app">
-            <div class="container-fulid my-5">
+            <div class="container-fluid my-5">
 
                 <!--------------------------------------------------------------------- row1 -->
 
                 <div class="pt-5 row">
                     <div class="col-3"></div>
                     <div class="col-1" id="pos0">
-                        <!-- <div class="character bounce">
-                            <img src="img/character/c1.svg" alt="">
-                        </div> -->
                         <img src="img/character/c1.svg" class="character bounce">
                     </div>
                     <div class="col-1 chs border1 boardImg" id="pos1" style="background-image : url('img/modals/p1.svg');"></div>
