--- a/boardgame.html
+++ b/boardgame.html
@@ -145,7 +145,7 @@
 
                         <div class="money">
                             <!--  money status -->
-                            <img class="buget_img" src="img/boards/coin.svg">
+                            <img class="coin spin" src="img/boards/coin.png">
                             <div class="row tokenState">
                                 <div class="col-12">
                                     <h2 class="fz_600 mb-0">{{ tokenState }}</h2>
@@ -221,7 +221,7 @@
 
                                     <div class="moneyModal">
                                         <!--  Token status -->
-                                        <img class="buget_Modal_img" src="img/boards/coin.svg">
+                                        <img class="buget_Modal_img" src="img/boards/coin.png">
                                         <h5 class="buget_Modal_value fz_600 ci2">{{ data[index].token }}</h5>
                                     </div>
                                     <button class="btn neumorphic-btn green" @click="selectResult(true, index)"><i class="fas fa-sack-dollar"></i> ลงทุน</button>
@@ -356,7 +356,7 @@
             count: 0,
             index: 0,
             dice: 0,
-            token: 2,
+            token: 230,
             tokenState: '230',
             investState: '',
             popupStatus: 0,
