--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container center_dis" style="height: 100vh;">
         <div class="row">
             <div class="col-md-7">
-                <img class="introImg bounce" src="/img/intro/i1.svg">
+                <img class="introImg bounce" src="img/intro/i1.svg">
                 <img class="sunray rotating" src="img/modals/sunray1.png">
             </div>
             <div class="col-md-5 center_dis">
