--- a/boardgame.html
+++ b/boardgame.html
@@ -174,7 +174,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="padding-bottom: 0;padding-top: 0.5em;">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="padding-top: 0.5em;">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
